[package]
name = "web-client"
version = "0.1.0"
authors = ["phillipnguyen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.11"
env_logger = "0.6"
bytes = "0.5"
futures = "0.3"
warp = "0.2"
url = "2.1.1"



